force-app/main/default/objects/W360_Incident_Log__c/W360_Incident_Log__c.object-meta.xml
<CustomObject>
    <description>Stores production incident / error log records for Workspace 360 incident analysis. Can be populated by the Workspace360IncidentSeeder for demo purposes.</description>
    <label>W360 Incident Log</label>
    <nameField>
        <displayFormat>INC-{0000}</displayFormat>
        <label>Incident Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>W360 Incident Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>