force-app/main/default/objects/W360_Incident_Log__c/fields/Apex_Class__c.field-meta.xml
<CustomField>
    <fullName>Apex_Class__c</fullName>
    <label>Apex Class / Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>