force-app/main/default/objects/W360_Incident_Log__c/fields/Hit_Count__c.field-meta.xml
<CustomField>
    <fullName>Hit_Count__c</fullName>
    <label>Hit Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>