force-app/main/default/objects/W360_Incident_Log__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Source Record Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>