force-app/main/default/objects/W360_Incident_Log__c/fields/Triggered_By__c.field-meta.xml
<CustomField>
    <fullName>Triggered_By__c</fullName>
    <label>Triggered By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>